# study

./: .clang-format  .gitignore  .travis.yml  compile.sh
bash/: hatchet  histogram  sl-prep  sl-split
cpp-access/: CMakeLists.txt  cpp-access.cpp
cpp-app/: CMakeLists.txt
cpp-app/dynamic-gtest/: CMakeLists.txt  install-dependencies.sh
cpp-app/dynamic-gtest/src/: app.cpp  main.cpp
cpp-app/dynamic-gtest/test/: CMakeLists.txt
cpp-app/dynamic-gtest/test/foo/: test_foo.cpp
cpp-app/gtestfsparam/src/: app.cpp  app.hpp
cpp-app/gtestfsparam/test/: CMakeLists.txt  algo.cpp  algo.hpp  fsutils.cpp  fsutils.hpp
cpp-app/gtestfsparam/test/foo/: test_foo.cpp
cpp-app/gtestfsparam/test/foo/vectors/: foo_big-basic.txt  foo_big-complex.txt
cpp-app/opencv/: CMakeLists.txt
cpp-app/opencv/src/: CMakeLists.txt  algo.cpp  main.cpp  process.cpp  process.hpp  seq.hpp
cpp-app/src/: CMakeLists.txt  algo.cpp  algo.hpp  main.cpp  opts.cpp  opts.hpp  process.cpp  process.hpp  timeit.hpp
cpp-app/testing/: CMakeLists.txt  install_dependencies.sh
cpp-app/testing/src/: CMakeLists.txt  app.cpp  foo.cpp  foo.hpp  main.cpp
cpp-app/testing/test/: CMakeLists.txt  test_foo.cpp
cpp-app/testing/test/bar/: test_bar.cpp
cpp-app/testing/test/foo/: test_foo.cpp
cpp-app/testing/test/perf/: CMakeLists.txt
cpp-app/testing/test/perf/bar/: perf_bar.cpp
cpp-app/testing/test/perf/foo/: perf_foo.cpp
cpp-app/testing/test/ut/: CMakeLists.txt
cpp-compile-time/: TODO  g++-sniffer  header-table  singledist.py  stat
cpp-compile-time/2/: CMakeLists.txt  README.md  gcc-wrapper.sh  print-includes.sh  print-time-table.sh  print-times.sh
cpp-compile-time/2/cmake/: cotime.cmake  cotime.sh  cotire.cmake
cpp-compile-time/2/src/: example_supervoxels.cpp  segmentation.cpp
cpp-compile-time/2/src/foo/: bar.cpp  bar.hpp  foo.cpp  foo.hpp
cpp-compile-time/2/src/std/: variant.cpp
cpp-curl/: AbortableHttpClient.cpp  AbortableHttpClient.hpp  compile.sh
cpp-fusion/: compile.sh  main.cpp  messages.cpp  messages.hpp  prophy.hpp
cpp-gdb/: README  bubble_sort.c  hello.c
cpp-graph/: .gitignore  graph.hpp  main.cpp  mo.hpp  moutil.hpp  user_who_wants_to_mock_away.cpp  user_who_wants_to_mock_away.hpp
cpp-inline-with-static/: README.md  compile.sh  lib.cpp  lib.h  main.cpp
cpp-layout/: compile.sh  padding.cpp
cpp-message/: codec.hpp  codec_detail.hpp  dispatcher.hpp  message.hpp  user.cpp
cpp-meta-api/: main.cpp
cpp-namespacing/: compile.sh  main.cpp  x.cpp  x.h
cpp-observer-wrapper/: main.cpp
cpp-overload-set/: 0-silent-run-time-nullptr.cpp  1-compile-time-error.cpp  2-implicit-conversion.cpp  3-metaprogramming.cpp  4-better-metaprogramming.cpp  5-better-still.cpp  compile.sh
cpp-pimpl-access/: pimpl.cpp
cpp-pp-for-each/: README  for_each.h
cpp-pthread/: compile.sh  odr.cpp  odr.h  test.cpp
cpp-reference-semantics/: main.cpp
cpp-rpc-continuation/: main.cpp
cpp-server/: app.hpp  compile.sh  main.cpp  net.hpp
cpp-weak-symbol/: compile  compile-lib  compile-lib-empty
debian-mongo/: .gitignore  fetch.bash
ide/: eclipse
make/: Makefile
matlab/: decoding.m  demodulate.m  normalize.m
prophy-relative-import/: b.prophy  build.sh  d.prophy  test.sh
python-12-balls/: find_2nd_weigh.py  find_3nd_weigh.py  find_3rd_weigh.py  weigh.py
python-logger/: .gitignore  conftest.py  printdaemon  process.py  pytest.ini  pytest_html_extras.py  pytest_logger.py  test_p.py  test_x.py  test_y.py
python-logging/: conftest.py  pytest_logger.py  test_x.py
python-matchsticks/: matchsticks.py
python-melina/: README.txt  calc.py  calcsheet  melina.py
python-obj/: monkey_patch_methods.py
python-poorprof/: poorprof.py  setup.py  test_x.py
python-profile/: .gitignore  long.py  sitecustomize.py  spike.py
python-protobuf/: alu.proto  readme  test.py
python-pyrace/: race_version_1_4_32.py  racefree_by_cookie.py  racefree_by_lock.py  racefree_by_lock_exclusive.py  racefree_by_rename.py  racefree_by_timeout.py  test_repro.py
read/: cpp  (+9 more)
ros-action/foo/: CMakeLists.txt  package.xml
ros-action/foo/include/foo/: reject_action_server.h  reject_action_server_imp.h
ros-action/foo/scripts/: gen_numbers.py
ros-action/foo/src/: averaging_client.cpp  averaging_server.cpp  client.cpp  fibonacci_client.cpp  fibonacci_client_cbs.cpp  fibonacci_server.cpp  server.cpp
ros-catkin-pkgconfig/src/a/: CMakeLists.txt  package.xml
ros-catkin-pkgconfig/src/c/: CMakeLists.txt  package.xml
ros-catkin-pkgconfig/src/e/: CMakeLists.txt  package.xml
ros-catkin-pkgconfig/src/i/: CMakeLists.txt  package.xml
ros-catkin-pkgconfig/src/l/: CMakeLists.txt  package.xml
ros-distro/src/arx/: CMakeLists.txt  package.xml
ros-distro/src/arx/src/: arx.cpp
ros-distro/src/bar/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros-distro/src/bar/include/bar/: bar.h
ros-distro/src/bar/src/: bar.cpp
ros-dynrec/dynrec/: CMakeLists.txt  package.xml
ros-dynrec/dynrec/cfg/: Lorem.cfg
ros-dynrec/dynrec/src/: node.cpp
ros-gazebo/gazebo_plugin_tutorial/: CMakeLists.txt  hello_world.cc  model_push.cc  model_push.world
ros-includedirorder/bar/: CMakeLists.txt  package.xml
ros-includedirorder/bar/src/: bar.cpp
ros-includedirorder/baz_msgs/: CMakeLists.txt  package.xml
ros-includedirorder/foo/: CMakeLists.txt  package.xml
ros-includedirorder/foo/include/foo/: foo.h
ros-includedirorder/foo/src/: foo.cpp
ros-timer/: CMakeLists.txt  package.xml
ros-timer/include/foo/: blocking_timer.h  timeit.h
ros-timer/src/: blocking_timer.cpp  race.cpp  server.cpp
ros1/demo/: CMakeLists.txt  package.xml
ros1/demo/src/topics/: listener.cpp  talker.cpp
ros2/demo/: CMakeLists.txt  package.xml
ros2/demo/launch/: comm.py  example_substitutions.py  example_substitutions.simple.py  example_substitutions.xml  example_substitutions.yaml  example_substitutions.yaml.include  include.py  launch.simple.py
ros2/demo/launch/events/: example_event_handlers.py  example_event_handlers.simple.py
ros2/demo/launch/include/: example_substitutions.py  example_substitutions.xml
ros2/demo/src/topics/: listener.cpp  talker.cpp
(+439 files in other folders)
