<?xml version="1.0"?>
<package format="2">
  <name>bar</name>
  <version>0.0.0</version>
  <description>The bar package</description>

  <maintainer email="aurzenligl@todo.todo">aurzenligl</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
