<?xml version="1.0"?>
<package format="3">
  <name>demo</name>
  <version>0.0.0</version>
  <description>demo</description>
  <maintainer email="aurzenligl@todo.todo">aurzenligl</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
