<?xml version="1.0"?>
<package format="2">
  <name>c</name>
  <version>1.0.0</version>
  <description>c</description>
  <maintainer email="aurzenligl@todo.todo">aurzenligl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>a</depend>
  <depend>b</depend>
</package>
