<package format="2">
  <name>arx</name>
  <version>0.1.2</version>
  <description>
  This package has super cow powers and uses bar capability.
  </description>
  <maintainer email="foo-dev@gmail.com">Footor Foobarian</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bar</build_depend>
  <exec_depend>bar</exec_depend>
</package>
